# trajectory-pattern-index-tree

./: .gitignore  CMakeLists.txt  README.md  README_ja.md
results/: demo_output.txt  thesis_benchmark.csv
sample_data/: query_trajectory.csv  trajectory_patterns.csv
src/: frequent_path_tree.hpp  hierarchical_bitmap.hpp  main.cpp  route_recommender.hpp  signature_tree.hpp  trajectory_pattern.hpp
